# iced-template

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  rustfmt.toml
examples/: combo_box.rs  download_progress.rs  editor.rs  filter_data.rs  layout.rs  mul_window.rs  multitouch.rs  passwd.rs  vectorial_text.rs
migrations/sqlite/: 2_user.down.sql  2_user.up.sql  3_log.up.sql  4_app.down.sql  4_app.up.sql
scripts/: build.bat  dev.bat
scripts/windows/: app.rc
src/: event.rs  macros.rs  main.rs  res.rs
src/config/: cargo.rs  general.rs  logger.rs  mod.rs
src/config/theme/: base.rs  mod.rs  themes.rs
src/data/: font.rs  icon.rs  mod.rs
src/db/: mod.rs  sqlite.rs
src/db/apis/: app.rs  log.rs  mod.rs  user.rs
src/db/type/: app.rs  logger.rs  mod.rs  user.rs
src/ui/: log_app.rs  login_app.rs  mod.rs
src/ui/components/: empty.rs  helpers.rs  layout.rs  mod.rs
src/ui/components/table/: divider.rs  mod.rs  style.rs
src/ui/main_app/: mod.rs
src/ui/main_app/autotest/: mod.rs  table.rs  theme.rs
src/ui/setting_app/: base.rs  mod.rs  user.rs
src/utils/: mod.rs
